--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -5,9 +5,16 @@
 
   <templatelist xsltname="NewsList.xslt" name="Danh sách tin"></templatelist>
   <templatelist xsltname="DSTinNoiBat.xslt" name="Danh sách tin nổi bật"></templatelist>
+  <templatelist xsltname="DSTuyenDung.xslt" name="Danh sách tuyển dụng"></templatelist>
+  <templatelist xsltname="DSDichvu.xslt" name="Danh sách dịch vụ - tiện ích"></templatelist>
+  <templatelist xsltname="HoTroTaiChinh.xslt" name="Hỗ trợ tài chính"></templatelist>
+  <templatelist xsltname="DSTienDo.xslt" name="Danh sách tiến độ"></templatelist>
+  <templatelist xsltname="ThuNgo.xslt" name="Thư ngỏ"></templatelist>
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
   <templatedetail xsltname="CTTinNoiBat.xslt" name="Chi tiết tin nổi bật"></templatedetail>
+  <templatedetail xsltname="CTTuyenDung.xslt" name="Chi tiết tuyển dụng"></templatedetail>
+  <templatedetail xsltname="CTDichvu.xslt" name="Chi tiết dịch vụ - tiện ích"></templatedetail>
 
   <position>
     <!--<add name="Trang chủ" value="1" resourcefile="" />-->
