--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -10,6 +10,7 @@
   <templatelist xsltname="HoTroTaiChinh.xslt" name="Hỗ trợ tài chính"></templatelist>
   <templatelist xsltname="DSTienDo.xslt" name="Danh sách tiến độ"></templatelist>
   <templatelist xsltname="ThuNgo.xslt" name="Thư ngỏ"></templatelist>
+  <templatelist xsltname="CoHoiDauTu.xslt" name="Cơ hội đầu tư"></templatelist>
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
   <templatedetail xsltname="CTTinNoiBat.xslt" name="Chi tiết tin nổi bật"></templatedetail>
