--- a/Xslt/banner/Settings.config
+++ b/Xslt/banner/Settings.config
@@ -3,7 +3,8 @@
   
   <!--value bắt buộc phải là giá trị binary. Ví dụ: 1; 2; 4; 8; 16;...-->
   <position>
-    <!--<add name="Banner" value="1" resourcefile="" />-->
+    <!-- <add name="Banner" value="1" resourcefile="" /> -->
+    <add name="Đối tác" value="1" resourcefile="" />
   </position>
   
 </settings>
