--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -11,6 +11,7 @@
   <templatelist xsltname="DSTienDo.xslt" name="Danh sách tiến độ"></templatelist>
   <templatelist xsltname="ThuNgo.xslt" name="Thư ngỏ"></templatelist>
   <templatelist xsltname="CoHoiDauTu.xslt" name="Cơ hội đầu tư"></templatelist>
+  <templatelist xsltname="CTTienIch.xslt" name="Tiện ích chi tiết"></templatelist>
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
   <templatedetail xsltname="CTTinNoiBat.xslt" name="Chi tiết tin nổi bật"></templatedetail>
