update Trang Gioi thieu

--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -12,6 +12,8 @@
   <templatelist xsltname="ThuNgo.xslt" name="Thư ngỏ"></templatelist>
   <templatelist xsltname="CoHoiDauTu.xslt" name="Cơ hội đầu tư"></templatelist>
   <templatelist xsltname="CTTienIch.xslt" name="Tiện ích chi tiết"></templatelist>
+  <templatelist xsltname="DS-GioiThieu-TongQuan.xslt" name="Giới thiệu - Tổng quan"></templatelist>
+  <templatelist xsltname="DS-GioiThieu-QuyHoach.xslt" name="Giới thiệu - Quy hoạch"></templatelist>
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
   <templatedetail xsltname="CTTinNoiBat.xslt" name="Chi tiết tin nổi bật"></templatedetail>
