--- a/Xslt/news/Settings.config
+++ b/Xslt/news/Settings.config
@@ -14,6 +14,7 @@
   <templatelist xsltname="CTTienIch.xslt" name="Tiện ích chi tiết"></templatelist>
   <templatelist xsltname="DS-GioiThieu-TongQuan.xslt" name="Giới thiệu - Tổng quan"></templatelist>
   <templatelist xsltname="DS-GioiThieu-QuyHoach.xslt" name="Giới thiệu - Quy hoạch"></templatelist>
+  <templatelist xsltname="DS-GioiThieu-ThietKe.xslt" name="Giới thiệu - Thiết kế"></templatelist>
 
   <templatedetail xsltname="NewsDetail.xslt" name="Chi tiết tin"></templatedetail>
   <templatedetail xsltname="CTTinNoiBat.xslt" name="Chi tiết tin nổi bật"></templatedetail>
